--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3306/springboot
 spring.datasource.username=root
 spring.datasource.password=4190
-sping.jpa.hibernate.ddl.auto = create
+#spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true;
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.jpa.properties.hibernate.format_sql=true
